--- a/tournaments.html
+++ b/tournaments.html
@@ -200,7 +200,7 @@
                 </div>
                 <div class="post-media pitem item-w1 item-h1 Americas">
                     <a href="Local-tournaments.html">
-                        <img src="tournaments/Canada.jpg" alt="" class="img-responsive">
+                        <img src="tournaments/canada.jpg" alt="" class="img-responsive">
                         <div>
                             <h3>Canada<small>North America</small></h3>
                             <i class="flaticon-unlink"></i>
