--- a/tournaments.html
+++ b/tournaments.html
@@ -210,9 +210,9 @@
 
                 <div class="post-media pitem item-w1 item-h1 Americas">
                     <a href="Local-tournaments.html">
-                        <img src="tournaments/usa.jpg" alt="" class="img-responsive">
+                        <img src="tournaments/canada.jpg" alt="" class="img-responsive">
                         <div>
-                            <h3>USA<small>America</small></h3>
+                            <h3>Canada<small>America</small></h3>
                             <i class="flaticon-unlink"></i>
                         </div>
                     </a>
